--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script type="text/javascript" src="scripts/jquery.js" async></script>
+		<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js'></script>
 		<script type="text/javascript" src="scripts/script.js" async></script>
+		<link rel ="stylesheet" href="styles/style.css">
 		<title>Etch-a-Sketch</title>
 	</head>
 
 	<body>
+		<p id="title">
+			Etch-a-Sketch
+		<p>
+
 		<div id="controls">
 			
 		</div>
 
 
 		<div id="canvas">
+			<table id="grid">	
 
+			</table>
 		</div>
 	</body>
 </html>
