Added grid to main body using jQuery.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<p id="title">
-			Etch-a-Sketch
+			<marquee>Etch-a-Sketch</marquee>
 		<p>
 
 		<div id="controls">
@@ -18,9 +18,7 @@
 
 
 		<div id="canvas">
-			<table id="grid">	
-
-			</table>
+			<table id="grid"></table>
 		</div>
 	</body>
 </html>
