Added jquery.js file into scripts to remove call to googleapis.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js'></script>
+		<script type='text/javascript' src='scripts/jquery.js'></script>
 		<script type="text/javascript" src="scripts/script.js" async></script>
 		<link rel ="stylesheet" href="styles/style.css">
 		<title>Etch-a-Sketch</title>
