--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 		<div id="controls">
 			<div id="clearButton">Clear</div>
+			<div id="changePixelButton">Change Grid Size</div>
 		</div>
 
 
